# skunk-works

./: README.md
DataPipeLineDemo/: .env.example  README.md  docker-compose.yml
DataPipeLineDemo/query-engine/: Dockerfile  app.py  requirements.txt
DataPipeLineDemo/scheduler/: Dockerfile  app.py  requirements.txt
KafkaExperiments/: README.md  docker-compose.yml
KafkaExperiments/docs/: PYTHON-DOC.md
KafkaExperiments/python-test-rig/: Dockerfile  requirements.txt
KafkaExperiments/schema-manager-service/: Dockerfile  requirements.txt
KafkaExperiments/schema-manager-service/app/: main.py
KafkaExperiments/schema-manager-service/samples/: UserEvents.json  UserSignupEvent.json
NetflowPacketAnalyzer/: README.md  docker-compose.yml
NetflowPacketAnalyzer/receiver/: Dockerfile  receiver.py
NetflowPacketAnalyzer/receiver/rust_processor/: .gitignore  Cargo.toml  pyproject.toml
NetflowPacketAnalyzer/receiver/rust_processor/src/: lib.rs
NetflowPacketAnalyzer/sender/: Dockerfile  sender.py
NetflowPacketAnalyzer/sender-rust/: Cargo.toml  Dockerfile
NetflowPacketAnalyzer/sender-rust/src/: main.rs
