[package]
name = "netflow_processor"
version = "0.1.0"
edition = "2021"

[lib]
name = "netflow_processor"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
byteorder = "1.4"

[build-dependencies]
pyo3-build-config = "0.20"